5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1592_1801.log
== TEST (2019-03-25 18:42:30) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = input("Abra + n" * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + n" * r)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:42:32) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = input("Abra + n" * r)
print(f)
-- EXECUTION TIME:
0.238937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input("Abra + n" * r)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:42:39) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = input("Abra + n" * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + n" * r)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:43:10) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = input("Abra + n" * 2)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + n" * 2)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:43:30) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = input("Abra + n" * 2)
print(f)
-- EXECUTION TIME:
0.142336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input("Abra + n" * 2)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:44:07) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = int(input("Abra + n" * 2))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra + n" * 2))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:44:09) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = int(input("Abra + n" * 2))
print(f)
-- EXECUTION TIME:
0.141052
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = int(input("Abra + n" * 2))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:44:13) 
-- CODE:
n = input("objeto:")
r = input("repeticoes:")
f = int(input("Abra + n" * 2))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra + n" * 2))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:46:51) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("abra + n" * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("abra + n" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:23) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("abra" n * r)
print(f)
-- ERROR:
File "XXXX", line 3
    f = input("abra" n * r)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:37) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("abra" n * r))
print(f)
-- ERROR:
File "XXXX", line 3
    f = int(input("abra" n * r))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:47:48) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra" n * r))
print(f)
-- ERROR:
File "XXXX", line 3
    f = int(input("Abra" n * r))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:48:17) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra" (n * r))
print(f)
-- ERROR:
File "XXXX", line 4
    print(f)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:48:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra" (n * r))
print( f )
-- ERROR:
File "XXXX", line 4
    print( f )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:48:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra" (n * r))
print( f )
-- EXECUTION TIME:
0.146616
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 4
    print( f )
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:49:06) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra n" * r))
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra n" * r))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:49:31) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra n " * r))
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra n " * r))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:49:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra " n * r))
print( f )
-- ERROR:
File "XXXX", line 3
    f = int(input("Abra " n * r))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:50:07) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra n " * r))
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra n " * r))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:50:09) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra n " * r))
print( f )
-- EXECUTION TIME:
0.144637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = int(input("Abra n " * r))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:19:43) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra n " * r))
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = int(input("Abra n " * r))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:20:15) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = int(input("Abra +" n * r))
print( f )
-- ERROR:
File "XXXX", line 3
    f = int(input("Abra +" n * r))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:20:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = iinput("Abra +" int(n * r)
print( f )
-- ERROR:
File "XXXX", line 3
    f = iinput("Abra +" int(n * r)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:20:44) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra +" int(n * r)
print( f )
-- ERROR:
File "XXXX", line 3
    f = input("Abra +" int(n * r)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:20:47) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra +" int(n * r)
print( f )
-- EXECUTION TIME:
0.25848
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 3
    f = input("Abra +" int(n * r)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:20:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra +" int(n * r))
print( f )
-- ERROR:
File "XXXX", line 3
    f = input("Abra +" int(n * r))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:21:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra +" int(n * r))
print( f )
-- EXECUTION TIME:
0.132876
-- ERROR:
  File "/home/codebench/codes/1592/1801/main.py", line 3
    f = input("Abra +" int(n * r))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:21:11) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra +" n * r)
print( f )
-- ERROR:
File "XXXX", line 3
    f = input("Abra +" n * r)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:21:33) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + n" * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + n" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:22:26) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + " * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + " * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:22:28) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + " * r)
print( f )
-- EXECUTION TIME:
0.175649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input("Abra + " * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:22:30) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + " * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + " * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:23:03) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + (n)" * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + (n)" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:23:04) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + (n)" * r)
print( f )
-- EXECUTION TIME:
0.183497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input("Abra + (n)" * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:23:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra + (n)" * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra + (n)" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:23:23) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra  (n)" * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra  (n)" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:24:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input("Abra " + "n" * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input("Abra " + "n" * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:25:38) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra " + "n") * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra " + "n") * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:25:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra " + n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:26:14) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra " + n ) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra " + n ) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:26:44) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:26:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print( f )
-- EXECUTION TIME:
0.136344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:26:59) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print( f )
-- EXECUTION TIME:
0.241334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:07) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.154823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:07) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.0885022
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1592/1801/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.13391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.22874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.316878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.555749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.359454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:08) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n ) * r)
print(f)
-- EXECUTION TIME:
0.530498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n ) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:27:25) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- EXECUTION TIME:
0.187697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:27:45) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- EXECUTION TIME:
0.163676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:21) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:44) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra" + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra" + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:30:56) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra " + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:31:11) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:31:24) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- EXECUTION TIME:
0.203993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:32:36) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " + n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " + n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " +n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " +n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " +n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra " +n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:33:07) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra " +n) * r)
print(f)
-- EXECUTION TIME:
0.26454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra " +n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:25) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:33:32) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.149246
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:40) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:33:52) 
-- CODE:
n = input("objeto:")
r = float(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:34:13) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:34:26) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.128983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:35:21) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:35:36) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.157681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:35:50) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:50) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.196213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.177022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.185514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.210345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.383639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.586044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:52) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.709224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:53) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.190408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:53) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.285931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:53) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.325275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:53) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.359208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:54) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.502844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:54) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.716287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.135226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.198422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.204633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.440671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.749256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:55) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.725006
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:56) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.170452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:56) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.521829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.515178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.539262
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.642083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:57) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.679827
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.125649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.178635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.43243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.638289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.7757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:58) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.720496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:57:59) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.147955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.406274
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.525138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.587169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.580588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:00) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.738254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.164298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.250831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.43623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.493263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:58:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print(f)
-- EXECUTION TIME:
0.522823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:58:50) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra "+n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:59:04) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(("Abra "+ n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(("Abra "+ n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:59:14) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:17) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print(f)
-- EXECUTION TIME:
0.184186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:59:22) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:32) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.206449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:32) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.134104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:33) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.175747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.212192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.175062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.388871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.540078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:34) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.477681
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1592/1801/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.420093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.363208
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1592/1801/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.299637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:35) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.348297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:36) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.23443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:36) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.285917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 20:59:36) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- EXECUTION TIME:
0.6141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:01:27) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+ n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+ n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:01:49) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:02:01) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:02:14) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- EXECUTION TIME:
0.1482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:19:31) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 21:19:44) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- EXECUTION TIME:
0.151279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:19:51) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:39:15) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- EXECUTION TIME:
0.139158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:17) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input((" Abra "+n) * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input((" Abra "+n) * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 11:53:02) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(" Abra "+n * r)
print( f )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = input(" Abra "+n * r)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 11:53:11) 
-- CODE:
n = input("objeto:")
r = int(input("repeticoes:"))
f = input(" Abra "+n * r)
print( f )
-- EXECUTION TIME:
0.270256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 3, in <module>
    f = input(" Abra "+n * r)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
